# QtVulkanCompute

./: CMakeLists.txt  compile_commands.json  vcpkg.json
src/: CMakeLists.txt  VulkanComputeManager.cpp  VulkanComputeManager.hpp  main.cpp  mainAdd.cpp  mainAddImage2D.cpp  mainFMA.cpp  mainMedianBlur2D.cpp  mainWarpPolar.cpp
src/shaders/: CMakeLists.txt  _CMakeLists.txt  add2D.comp  add2D.comp.glsl  addImage2D.comp  addImage2D.comp.glsl  fma2D.comp  medianBlur2D.comp  warpPolar.comp  warpPolarCompute.comp.glsl  warpPolarInverse.comp
src/vcm/: ComputeShaderExecutor.hpp  TimeIt.hpp  VulkanComputeManager.cpp  VulkanComputeManager.hpp  VulkanComputeManager2.hpp  vcm.hpp
